--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.3.4'
     // https://mvnrepository.com/artifact/org.mockito/mockito-core
     testImplementation 'org.mockito:mockito-core:4.5.1'
+    // https://mvnrepository.com/artifact/log4j/log4j
+    implementation 'log4j:log4j:1.2.17'
 }
